# zhixi

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  data.db
migrations/: 20240101000000_initial_schema.sql  20251119000000_add_solution_link.sql  20260205000000_add_exams_and_incorrect.sql  20260206000000_add_public_courses.sql  20260207000000_rename_exam_date_to_semester.sql  20260207100000_add_exam_link.sql
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs  translate.rs
templates/: course_exams.html  course_log.html  course_settings.html  course_study.html  index.html  layout.html  login.html  register.html  semester.html
templates/partials/: course_card.html  exam_item.html  exam_item_edit.html  log_item.html  log_item_edit.html  problem_edit.html  problem_row.html  semester_row.html  study_problem_list.html
templates/public/: calendar.html  layout.html  problems.html
