[package]
name = "zhixi"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json", "secrets"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
askama = "0.12"
askama_rocket = "0.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
bcrypt = "0.17.1"
